--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,10 @@
     "@ckeditor/ckeditor5-react": "^1.1.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "^3.0.0"
+    "react-redux": "^7.0.2",
+    "react-scripts": "^3.0.0",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
