--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "dotenv": "^8.0.0",
     "draft-js": "^0.10.5",
     "draft-js-plugins-editor": "^2.1.1",
     "react": "^16.8.6",
